# algo-old

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  graph.h  graph_coloring.c  graph_coloring.h  list.c  list.h  set.c  set.h  simple_guile  simple_guile.c  test_list  test_list.c
doc/: list.org
include/: list.h
resources/: simple.graph  simple.list
src/: .dir-locals.el  graph.c  graph_coloring.c  list.c
tests/: list.scm  test_graph_coloring.c  test_list.c
